@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-20T16:24:55Z",
+  "timestamp" : "2022-06-21T01:21:22Z",
   "count_outdated" : 312,
   "uniques_outdated" : 201,
-  "count" : 340,
+  "count" : 341,
   "uniques" : 216,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-06-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
